# nn-owo

./: pyproject.toml
doc/: mademore.ipynb  nanograd.ipynb
nanograd/: engine.py  nn.py
