[project]
name = "nn-owo"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "graphviz>=0.21",
    "jupyter>=1.1.1",
    "matplotlib>=3.10.7",
    "numpy>=2.3.4",
    "torch>=2.9.0",
    "torchvision>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
exclude = ["test*"]